{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 39,
  "lineage": "8e426154-3427-6cf4-e796-060e89f8965c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "tf-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:644237647863:loadbalancer/tf-elb",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tf-elb-1981055637.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-elb",
            "idle_timeout": 100,
            "instances": [
              "i-0229621a3aaa08905",
              "i-0950fd85306fa36af"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-elb",
            "security_groups": [
              "sg-07d93deb2bf606ac9"
            ],
            "source_security_group": "644237647863/allow_http",
            "source_security_group_id": "sg-07d93deb2bf606ac9",
            "subnets": [
              "subnet-035c5b7d3703c3786",
              "subnet-04fff29e3ddadd6fe"
            ],
            "tags": {
              "Name": "tf-terraform-elb"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_instance.webservers",
            "aws_security_group.tf_security_gp",
            "aws_subnet.tf_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e38b48473ea57778",
            "arn": "arn:aws:ec2:us-east-2:644237647863:instance/i-0229621a3aaa08905",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0229621a3aaa08905",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0383c30235b92e7cd",
            "private_dns": "ip-10-20-1-182.us-east-2.compute.internal",
            "private_ip": "10.20.1.182",
            "public_ip": "3.133.153.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0aa3aa5a52c298b1f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07d93deb2bf606ac9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fff29e3ddadd6fe",
            "tags": {
              "Name": "Server-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07d93deb2bf606ac9"
            ]
          },
          "dependencies": [
            "aws_security_group.tf_security_gp",
            "aws_subnet.tf_public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e38b48473ea57778",
            "arn": "arn:aws:ec2:us-east-2:644237647863:instance/i-0950fd85306fa36af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0950fd85306fa36af",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-05076fc93c15991c0",
            "private_dns": "ip-10-20-2-59.us-east-2.compute.internal",
            "private_ip": "10.20.2.59",
            "public_ip": "3.132.216.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e3ece0f08694cd81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07d93deb2bf606ac9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035c5b7d3703c3786",
            "tags": {
              "Name": "Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07d93deb2bf606ac9"
            ]
          },
          "dependencies": [
            "aws_security_group.tf_security_gp",
            "aws_subnet.tf_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04724ae021de7b9de",
            "owner_id": "644237647863",
            "tags": {
              "Name": "tf_inter_gateway"
            },
            "vpc_id": "vpc-01d993ff72ca3c32a"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04758f401462f69cc",
            "owner_id": "644237647863",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04724ae021de7b9de",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public_route_table"
            },
            "vpc_id": "vpc-01d993ff72ca3c32a"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igateway",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_rt_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0235dc52a31d00dd1",
            "route_table_id": "rtb-04758f401462f69cc",
            "subnet_id": "subnet-04fff29e3ddadd6fe"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igateway",
            "aws_route_table.tf_route_table",
            "aws_subnet.tf_public_subnet",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07babab62645e95aa",
            "route_table_id": "rtb-04758f401462f69cc",
            "subnet_id": "subnet-035c5b7d3703c3786"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igateway",
            "aws_route_table.tf_route_table",
            "aws_subnet.tf_public_subnet",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_security_gp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:644237647863:security-group/sg-07d93deb2bf606ac9",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d93deb2bf606ac9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "644237647863",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01d993ff72ca3c32a"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:644237647863:subnet/subnet-04fff29e3ddadd6fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-04fff29e3ddadd6fe",
            "map_public_ip_on_launch": true,
            "owner_id": "644237647863",
            "tags": {
              "Name": "tc_subnet-1"
            },
            "vpc_id": "vpc-01d993ff72ca3c32a"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:644237647863:subnet/subnet-035c5b7d3703c3786",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-035c5b7d3703c3786",
            "map_public_ip_on_launch": true,
            "owner_id": "644237647863",
            "tags": {
              "Name": "tc_subnet-2"
            },
            "vpc_id": "vpc-01d993ff72ca3c32a"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:644237647863:vpc/vpc-01d993ff72ca3c32a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-04c6383ce246ee889",
            "default_route_table_id": "rtb-00ae5910b6a9ee10a",
            "default_security_group_id": "sg-0d990bb729b1fe9f0",
            "dhcp_options_id": "dopt-197fa572",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01d993ff72ca3c32a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00ae5910b6a9ee10a",
            "owner_id": "644237647863",
            "tags": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}